--- a/wcd/website/templates/analyzed_urls.html
+++ b/wcd/website/templates/analyzed_urls.html
@@ -5,8 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>History of Analyzed URLs</title>
     <style>
+        @font-face {
+            font-family: Montserrat-Regular;
+            src: url('../fonts/montserrat/static/Montserrat-Regular.ttf'); 
+        }
+        @font-face {
+            font-family: Montserrat-Bold;
+            src: url('../fonts/montserrat/static/Montserrat-Bold.ttf'); 
+        }
+  
+        @font-face {
+            font-family: Montserrat-ExtraBold;
+            src: url('../fonts/montserrat/static/Montserrat-ExtraBold.ttf'); 
+        }
+  
+        @font-face {
+            font-family: Montserrat-Medium;
+            src: url('../fonts/montserrat/static/Montserrat-Medium.ttf'); 
+        }
+  
+ 
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Montserrat-Regular', sans-serif;
             background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%); 
             margin: 0;
             padding: 20px;
@@ -15,26 +36,13 @@
             
         }
 
-        header {
-            position: fixed;
-            /* Ensuring navbar is fixed */
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 1000;
-            /* Higher z-index to stay above other elements */
-        }
-
-        .header-text{
-            margin-top: 30px;
-        }
-
+        
         h1 {
             color: #041324;
             text-align: center;
             font-size: 2em;
             margin: 40px 0 20px;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Montserrat-Bold', sans-serif;
         }
 
         .history-container {
@@ -46,7 +54,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border: 1px solid #ddd;
             position: relative;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         /* Search bar styling */
@@ -57,6 +65,8 @@
             border: 1px solid #ddd;
             border-radius: 20px;
             font-size: 1em;
+            font-family: 'Montserrat-Bold', sans-serif;
+
         }
 
         table {
@@ -65,6 +75,7 @@
             margin-top: 20px;
             border-radius: 8px;
             overflow: hidden;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         thead {
@@ -76,12 +87,14 @@
             padding: 15px;
             text-align: left;
             border-bottom: 1px solid #ddd;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         th {
             font-size: 0.9em;
             text-transform: uppercase;
             letter-spacing: 0.05em;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         tr:nth-child(even) {
@@ -90,6 +103,7 @@
 
         td {
             font-size: 0.95em;
+            font-family: 'Montserrat-Regular', sans-serif;
             color: #333;
         }
 
@@ -104,6 +118,7 @@
             display: flex;
             justify-content: space-between;
             margin-bottom: 15px;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         .button {
@@ -115,10 +130,12 @@
             background-color: #041324;
             color: white;
             transition: background-color 0.3s ease;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         .button:hover {
             background-color: #03172c;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         /* Side panel for deleting history */
@@ -135,6 +152,7 @@
             padding: 20px;
             transform: translateX(100%);
             transition: transform 0.3s ease;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         .side-panel.active {
@@ -170,97 +188,27 @@
         /* Center the Back to Analyzer button */
         .center-button {
             display: flex;
+            text-decoration: none !important;
             justify-content: center;
             margin-top: 20px;
+            font-family: 'Montserrat-Regular', sans-serif;
+        }
+
+        .center-button a {
+            text-decoration: none; /* This will directly target the <a> element */
+            padding: 10px 15px;
+            background-color: #041324;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
         }
     </style>
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
-        rel="stylesheet" />
-    
+       
 </head>
 <body>
-
-    <header class="fixed top-0 left-0 w-full z-50">
-        <div class="px-3 py-2 text-bg-dark border-bottom">
-            <div class="container">
-                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                    <a href="{% url 'home' %}"
-                        class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                            <use xlink:href="#bootstrap"></use>
-                        </svg>
-                        <i class="bi bi-shield-check" style="font-size: 2rem"></i>
-                        CertiScan
-                    </a>
-
-                    <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
-                        <li>
-                            <a href="{% url 'home' %}" class="nav-link text-white">
-                                <svg class="bi d-block mx-auto mb-1" width="24" height="24">
-                                    <use xlink:href="#home"></use>
-                                </svg>
-                                <i class="bi bi-house-fill"></i>
-                                Home
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'notification_alert' %}" class="nav-link text-white">
-                                <svg class="bi d-block mx-auto mb-1" width="24" height="24">
-                                    <use xlink:href="#envelope"></use> <!-- Use the envelope symbol for contact -->
-                                </svg>
-                                <i class="bi bi-bell-fill"></i> <!-- Bootstrap icon for envelope -->
-                                Notification
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'analyzed_urls' %}" class="nav-link text-white">
-                                <svg class="bi d-block mx-auto mb-1" width="24" height="24">
-                                    <use xlink:href="#history"></use> <!-- Updated to use the history symbol -->
-                                </svg>
-                                <i class="bi bi-clock-history"></i> <!-- Bootstrap icon for history -->
-                                History
-                            </a>
-                        </li>
-                        
-                        <li>
-                            <a href="{% url 'grading_system'%}" class="nav-link text-white">
-                                <svg class="bi d-block mx-auto mb-1" width="24" height="24">
-                                    <use xlink:href="#speedometer2"></use>
-                                </svg>
-                                <i class="bi bi-speedometer2"></i>
-                                About Grades
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'send_email_view' %}" class="nav-link text-white">
-                                <svg class="bi d-block mx-auto mb-1" width="24" height="24">
-                                    <use xlink:href="#envelope"></use> <!-- Use the envelope symbol for contact -->
-                                </svg>
-                                <i class="bi bi-envelope-fill"></i> <!-- Bootstrap icon for envelope -->
-                                Contact
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'logout_view' %}" class="nav-link text-white">
-                                <svg class="bi d-block mx-auto mb-1" width="24" height="24">
-                                    <use xlink:href="#people-circle"></use>
-                                </svg>
-                                <i class="bi bi-person"></i>
-                                Logout
-                            </a>
-                        </li>
-
-                        
-                    </ul>
-                </div>
-            </div>
-        </div>
-       
-    </header>
-    <br><br><br><br><br>
 
     <h1>History of Analyzed URLs</h1>
     <br> 
@@ -279,7 +227,7 @@
             <thead>
                 <tr>
                     <th>URL</th>
-                    <th>Grade</th> 
+                    <th>Grade </th> 
                     <th>Date Analyzed</th>
                 </tr>
             </thead>
