--- a/wcd/website/templates/grading_system.html
+++ b/wcd/website/templates/grading_system.html
@@ -6,50 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grading System Information</title>
     <style>
+        @font-face {
+            font-family: Montserrat-Regular;
+            src: url('../fonts/montserrat/static/Montserrat-Regular.ttf'); 
+        }
+        @font-face {
+            font-family: Montserrat-Bold;
+            src: url('../fonts/montserrat/static/Montserrat-Bold.ttf'); 
+        }
+  
+        @font-face {
+            font-family: Montserrat-ExtraBold;
+            src: url('../fonts/montserrat/static/Montserrat-ExtraBold.ttf'); 
+        }
+  
+        @font-face {
+            font-family: Montserrat-Medium;
+            src: url('../fonts/montserrat/static/Montserrat-Medium.ttf'); 
+        }
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Montserrat-Regular', sans-serif;
             margin: 50px;
             text-align: center;
-            background: url("{% static 'images/bgimage3.jpg' %}") no-repeat center center fixed;
+            background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
             background-size: cover;
         }
 
         h1 {
-            font-size: 45px;
-            color: #fafbfc;
-            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-size: 2em;
+            color: #070707;
+            font-family: 'Montserrat-Bold', sans-serif;
         }
-        u{
-            color: aliceblue;
-        }
+        
 
         h2{
-            color: #050505;
-            font-family: Georgia, 'Times New Roman', Times, serif;
+            color: #0c0c0c;
+            font-family: 'Montserrat-Bold', sans-serif;
             text-align: center;
             font-size: 20px;
         }
 
         p {
             font-size: 22px;
-            color: #f9f7f7;
+            color: #0b0a0a;
             margin-top: 17px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-family: 'Montserrat-Regular', sans-serif;
             text-align: justify;
         }
 
         .p2{
             font-size: 18px;
-            color: #070000;
+            color: #040404;
             margin-top: 20px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-family: 'Montserrat-Regular', sans-serif;
             text-align: left;
             border-radius: 8px;
             border-color: #050505;
         }
 
         .container1 {
-            background-color: #beccfc;
+            background-image: linear-gradient(120deg, #b585e2 0%, #d284e1 100%);
+            font-family: 'Montserrat-Regular', sans-serif;
             padding: 20px;
             border-radius: 8px;
             border-color: #050505;
@@ -61,7 +79,8 @@
             margin: 0 auto;
         }
         .container2 {
-            background-color: #beccfc;
+            background-image: linear-gradient(120deg, #b585e2 0%, #d284e1 100%);
+            font-family: 'Montserrat-Regular', sans-serif;
             padding: 20px;
             border-radius: 8px;
             border-color: #050505;
@@ -89,56 +108,61 @@
             margin-bottom: 10px;
             padding: 10px 20px;
             font-size: 20px;
-            background-color: #f2f5f7;
-            color: rgb(3, 5, 7);
+            background-color:#212529;
+            color: rgb(239, 242, 245);
             border: black;
             border-radius: 10px;
             cursor: pointer;
             transition: background-color 0.3s ease;
             text-decoration: none;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         .back-button:hover {
-            background-color: #beccfc;
+            font-family: 'Montserrat-Regular', sans-serif;
+            color: rgb(245, 240, 240);
         }
 
         table{ 
-            background-color: #beccfc;
-            font-family: Georgia, 'Times New Roman', Times, serif;
+            width: 65%;
+            background: linear-gradient(120deg, #b585e2 0%, #d284e1 100%);
+            font-family: 'Montserrat-Regular', sans-serif;
             text-align: center;
             margin: 0 auto;
             font-size: 20px;
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
         }
+
         .navbar {
             background-color: transparent; /* Make navbar transparent */
             overflow: hidden;
             display: flex;
             justify-content: center;
             padding: 10px 0;
+            font-family: 'Montserrat-Bold', sans-serif;
         }
 
         .navbar a {
-            color: white;
-            padding: 14px 20px;
-            text-decoration: underline; /* Add underline to the text */
-            text-align: center;
-            font-size: 23px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            transition: background-color 0.3s ease, color 0.3s ease; /* Added color transition */
+           color: rgb(9, 9, 9); /* Initial text color */
+           padding: 14px 20px;
+           text-decoration: underline; /* Underline the text */
+           text-align: center;
+           font-size: 23px;
+           transition: background-image 0.3s ease, color 0.3s ease; /* Added transition for background and color */
         }
+
 
         .navbar a:hover {
-           background-color:#beccfc; /* Slightly transparent background on hover */
-           color: rgb(8, 8, 8); /* Keep the text color white */
+           background-image: linear-gradient(to right,  #b585e2 , #d284e1); /* Apply gradient as background */
+           color: rgb(8, 8, 8); /* Change text color */
+           font-family: 'Montserrat-Bold', sans-serif;
         }
-
     </style>
 </head>
 <body>
     
 
-    <b><u> <h1>SSL/TLS GRADING SYSTEM</h1></u></b>
+    <h1>SSL/TLS  GRADING  SYSTEM </h1>
      
     <p>
        The SSL/TLS grading system evaluates the security of encrypted connections by analyzing key factors such as
