--- a/wcd/website/templates/login.html
+++ b/wcd/website/templates/login.html
@@ -8,28 +8,31 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Poppins', Arial, sans-serif;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         body {
-            
-            
             color: #fff;
             display: flex;
             justify-content: center;
+            font-family: 'Montserrat-Regular', sans-serif;
             align-items: center;
             height: 100vh;
-            background: url("{% static 'images/bgimage2.jpg' %}") no-repeat center center fixed;
-            background-size: cover;
-            background-color: #726e68a3; 
+            background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%); 
+            background-size: cover; 
             
         }
 
+        
+
         /* Login Container */
         .login-container {
-            background-color: #beccfc;
-            padding: 60px;
+            background-image: linear-gradient(120deg, #b585e2 0%, #d284e1 100%);
+            font-family: 'Montserrat-Regular', sans-serif;
+            padding: 80px;
             border-radius: 18px;
+            border: 4px solid #050505;
+            border-color: #050505;
             width: 700px;
             box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
             text-align: center;
@@ -38,19 +41,22 @@
         /* Login Box */
         .login-box h2 {
             margin-bottom: 20px;
-            font-size: 28px;
+            font-family: 'Montserrat-Bold', sans-serif;
+            font-size: 30px;
             font-weight: bold;
-            color: #171917; /* Light blue title */
+            color: #171917;
         }
 
         .input-group {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             text-align: left;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         .input-group label {
-            font-size: 16px;
+            font-size: 20px;
             color: #171917;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         .input-group input {
@@ -63,34 +69,39 @@
             background-color: #484848;
             color: #fff;
             outline: none;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         .input-group input::placeholder {
-            color: #b3d9ff; /* Placeholder text color */
+            color: #b6b3b3; /* Placeholder text color */
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         /* Button */
         .btn-login {
             width: 100%;
             padding: 12px;
-            background: linear-gradient(90deg, #4ca9d4, #4258b9); /* Gradient button */
             border: none;
             border-radius: 5px;
-            color: #000;
+            color: white;
+            background: #212529; 
             font-size: 18px;
             cursor: pointer;
             transition: background 0.3s ease;
+            font-family: 'Montserrat-Regular', sans-serif;
         }
 
         .btn-login:hover {
-            background: linear-gradient(90deg, #2f6cce, #5b7acf); /* Button hover effect */
+            background-color: #242426;
         }
 
         /* Register Link */
         .register-link {
             margin-top: 15px;
-            font-size: 14px;
+            font-size: 18px;
             color: #000;
+            font-family: 'Montserrat-Regular', sans-serif;
+            
         }
 
         .register-link a {
